Fix bearing (radial) bug

--- a/track.html
+++ b/track.html
@@ -42,10 +42,10 @@
 		<label id="altitudereadout" class="alphareadout">0</label><br>
 		<label id="ascenttext" class="alphareadout">Ascent Rate:</label><br>
 		<label id="ascentreadout" class="alphareadout">0</label><br>
-		<label id="bearingtext" class="alphareadout">Bearing:</label><br>
-		<label id="bearingreadout" class="alphareadout">0</label><label class="alphareadout">&deg</label><br>
 		<label id="rangetext" class="alphareadout">Range:</label><br>
 		<label id="rangereadout" class="alphareadout">0</label><label class="alphareadout"> miles</label><br>
+		<label id="bearingtext" class="alphareadout">Radial:</label><br>
+		<label id="bearingreadout" class="alphareadout">0</label><label class="alphareadout">&deg</label><br>
 		<label id="latitudetext" class="alphareadout">Latitude:</label><br>
 		<label id="latitudereadout" class="alphareadout">NaN</label><br>
 		<label id="longitudetext" class="alphareadout">Longitude:</label><br>
