Add replay and fix various bugs

--- a/web/active.html
+++ b/web/active.html
@@ -4,5 +4,5 @@
 <table border="1" id='associate-callsign-table'>
 </table>
 </div>
-<script src="/scripts/active.js">
+<script src="/web/active.js">
 </script>
