--- a/web/config.html
+++ b/web/config.html
@@ -36,5 +36,5 @@
 <input type='button' value='Reset All' id='reset-all'/>
 <input type='button' value='Clear Tracks' id='clear-tracks'/>
 
-<script src="/scripts/config.js">
+<script src="/web/config.js">
 </script>
