--- a/web/track.html
+++ b/web/track.html
@@ -54,7 +54,7 @@
 </div>
 <div id="map"></div>
 <script src="../leaflet/leaflet.js"></script>
-<script src="/scripts/main.js"> </script>
+<script src="/web/main.js"> </script>
 </script>
 </body>
 </html>
