Temporary tracking commit

--- a/web/track.html
+++ b/web/track.html
@@ -1,13 +1,7 @@
 <html>
 <head>
-<link rel="stylesheet" href="leaflet/leaflet.css" />
-<!--[if lte IE 8]>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.ie.css" />
-<![endif]-->
-<!--<style type="text/css">
-#map { height: 180px; }
-</style>-->
-<script type="text/javascript" src="/jquery/jquery-1.11.1.min.js"></script>
+<link rel="stylesheet" href="/leaflet.css" />
+<script type="text/javascript" src="/jquery.js"></script>
 <style>
 	#readouts{
 		position: absolute; 
@@ -53,7 +47,7 @@
 	</div>
 </div>
 <div id="map"></div>
-<script src="../leaflet/leaflet.js"></script>
+<script src="/leaflet.js"></script>
 <script src="/web/main.js"> </script>
 </script>
 </body>
